Mon Jan 29 18:49:07 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: do what we do on inside program runs, when
	  we do "load and run" in terms of printout on the console

Mon Jan 29 16:53:24 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.[ch]: add "remember" settings to the gui and by
	  default don't remember precision and output settings as those
	  are most likely temporary.  Also add "mixed fractions" option to
	  the gui.  Add a Help button to the settings dialog

	* help/C/prefs-display.xml, help/C/prefs-precision.xml,
	  help/C/genius.xml: update for the above

	* help/C/Makefile.am: add gel-matrix-linalg.xml

Mon Jan 29 13:52:33 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: don't set output style to normal before showing
	  full answer, we want it in the current style

Mon Jan 29 13:32:29 2007  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml, help/C/gel-function-list.xml,
	  help/C/gel-matrix-linalg.xml: minor updates, add skeleton
	  "Linear Algebra" section

	* src/funclib.c, src/matrixw.c, src/gnome-genius.c, src/calc.h:
	  update copyright strings

Mon Jan 29 12:04:16 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Add "Show Full Answer" menu item, always show
	the Programs menu and add a "Console" item to the programs menu

Mon Jan 29 10:24:52 2007  Jiri (George) Lebl <jirka@5z.com>

	* lib/equation_solving/formulas.gel: Fix handling of real solutions
	  for the cubic to avoid ugly expressions with small imaginary values
	  where everything should be real.
	
	* src/geniustests.txt, src/longtest.gel: Fixup tests

	* help/C/gel-function-list.xml: small update to the formula entries

Mon Jan 29 01:35:56 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c, src/matrixw.c: DiagonalOf now returns a column
	  vector

	* lib/equation_solving/formulas.gel: Add QuarticFormula and use it in
	  PolynomialRoots.  Also return column vectors from QuadraticFormula,
	  CubicFormula
